--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,23 +1,44 @@
 ToDo
 
+Persistent SecondLevel 
+
 Use String Builder  -  Instead of char array... (to avoid overflow) ********** IMP **************
+
+*****************  IMP *****  delte intermediate index files
+
+
 
 Use long I guess.. for IDs
 
-Comma separated output
-
 Exception handling
 
-Add title data
+Add MORE stop words
 
-2nd Level index...
-
+2nd Level index... ********** Persist it **********..
 
 Improve parsing...
 
 Free up memory used by TreeSet Map etc.
 
+Adjust no of docs to be persisted to file to optimal...
 
+
+address warnings..
+
+make sure we KEEP Stop WORDS file and those words indeed get added....
+TreeSet to HashSet..
+
+
+
+bvfg taking 10 sec
+
+yay -- giving result for yai...
+
+Try skipping the greater word earlier..
+
+
+
+Binary Search Handle Corner case.
 
 *********** Solved  ******************
 
